Modify classes to match java 17 methods